--- a/public/assets/css/customized-style.css
+++ b/public/assets/css/customized-style.css
@@ -1,9 +1,55 @@
-.rtl .customizer-links{
+/* general override */
+body {
+    font-family: "Tajawal", "Roboto";
+    letter-spacing: 0.6px;
+}
+
+/* ------------------------- globals */
+
+th {
+    font-size: 14px;
+    font-weight: 500 !important;
+}
+
+td {
+    font-size: 14px;
+    font-weight: 500;
+}
+
+label {
+    font-size: 14px;
+    font-weight: 500;
+}
+
+/* ------------------------- globals / custom */
+
+.btn--table {
+    padding: 4px 15px;
+    font-size: 13px;
+}
+
+input,
+select {
+    font-size: 14px;
+    height: 46px;
+}
+
+/* global classes */
+.min-w-80px {
+    min-width: 80px;
+}
+.min-w-90px {
+    min-width: 90px;
+}
+
+.min-w-120px {
+    min-width: 120px;
+}
+
+.rtl .customizer-links {
     display: none;
 }
 
-.mb-20{
-
+.mb-20 {
     margin-bottom: 20px;
-    
 }
