--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5408,7 +5408,9 @@ table tbody .border-bottom-warning td {
         .page-wrapper.compact-wrapper .page-body-wrapper header.main-nav .main-navbar .nav-menu > li .nav-link {
           border-radius: 10px;
           -webkit-transition: all 0.5s ease;
-          transition: all 0.5s ease; }
+          transition: all 0.5s ease;
+          margin-bottom: 10px;
+          font-size:1rem}
           .page-wrapper.compact-wrapper .page-body-wrapper header.main-nav .main-navbar .nav-menu > li .nav-link.active, .page-wrapper.compact-wrapper .page-body-wrapper header.main-nav .main-navbar .nav-menu > li .nav-link:hover {
             background-color: #24695c;
             color: #d0efe9;
