--- a/public/assets/css/customized-style.css
+++ b/public/assets/css/customized-style.css
@@ -1,11 +1,21 @@
+:root {
+    --text-main: #24695c;
+}
+
 /* general override */
 body {
     font-family: "Tajawal", "Roboto";
     letter-spacing: 0.6px;
+    color: #222;
+    font-weight: 500;
+    transition: 0.3s all ease-in-out;
 }
 
 /* ------------------------- globals */
 
+tr {
+    vertical-align: middle !important;
+}
 th {
     font-size: 14px;
     font-weight: 500 !important;
@@ -21,17 +31,66 @@ label {
     font-weight: 500;
 }
 
+input[type="date"] {
+    text-align: center;
+}
+
+.fs-13 {
+    font-size: 13px;
+}
+
+.scaleRotate--1:hover i,
+.scaleRotate--1:focus i {
+    transform: scale(1.2);
+}
+
+/* ------------------------- select2 */
+
+.select2-container--default
+    .select2-selection--single
+    .select2-selection__rendered {
+    line-height: 36px;
+    font-weight: 500;
+}
+
+.select2-container--default
+    .select2-selection--single
+    .select2-selection__rendered {
+    color: #222;
+}
+
+.selection .select2-selection {
+    font-family: "Tajawal", "Roboto";
+}
+
+.select2-container--default
+    .select2-selection--single
+    .select2-selection__arrow {
+    top: 11px !important;
+}
+
 /* ------------------------- globals / custom */
 
+.form--subheading {
+    border-bottom: 2px solid var(--text-main);
+    padding-bottom: 4px;
+}
 .btn--table {
     padding: 4px 15px;
     font-size: 13px;
 }
 
-input,
-select {
+.btn--close {
+    border-bottom: 1px solid var(--bs-danger);
+    border-radius: 0px;
+}
+
+input {
     font-size: 14px;
     height: 46px;
+    outline: none;
+    box-shadow: none !important;
+    font-weight: 500 !important;
 }
 
 /* global classes */
