--- a/public/assets/css/customized-style.css
+++ b/public/assets/css/customized-style.css
@@ -209,7 +209,7 @@ input[type="file"] {
 }
 
 .form--subheading {
-    border-bottom: 2px solid #1b6d5b;
+    border-bottom: 2px solid #eaeaea;
     padding-bottom: 4px;
 }
 .btn--table {
@@ -233,7 +233,7 @@ input[type="file"] {
 }
 
 .table--img {
-    border: 2px solid #1b6d5b;
+    border: 2px solid #eaeaea;
     width: 50px;
     height: 50px;
 }
