--- a/public/assets/css/customized-style.css
+++ b/public/assets/css/customized-style.css
@@ -302,6 +302,10 @@ input[type="checkbox"] {
     display: none;
 }
 
+.customizer-links{
+    display: none;
+}
+
 .mb-20 {
     margin-bottom: 35px;
 }
