--- a/public/assets/css/customized-style.css
+++ b/public/assets/css/customized-style.css
@@ -128,6 +128,12 @@ label {
 input[type="date"] {
     text-align: center;
 }
+
+input[name="phone"] {
+    direction: ltr;
+    text-align: right;
+}
+
 input[type="file"] {
     padding-top: 12px;
     padding-bottom: 12px;
@@ -302,7 +308,7 @@ input[type="checkbox"] {
     display: none;
 }
 
-.customizer-links{
+.customizer-links {
     display: none;
 }
 
