--- a/public/assets/css/customized-style.css
+++ b/public/assets/css/customized-style.css
@@ -272,6 +272,22 @@ input[type="file"] {
     font-size: 13px;
 }
 
+.footer-icons {
+    background-color: #009a70;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    padding: 6px;
+    width: 42px;
+    height: 42px;
+}
+
+.footer-icons i {
+    font-size: 26px;
+    color: white;
+}
+
 .btn--close {
     border-bottom: 1px solid var(--bs-danger);
     border-radius: 0px;
